Updated code and bug fixes, Release R01.00.25-20150218

--- a/ContentUploader/pom.xml
+++ b/ContentUploader/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tds</groupId>
 	<artifactId>ContentUploader</artifactId>
-	<version>01.00.24</version>
+	<version>R01.00.25</version>
 	<packaging>war</packaging>
 	<name>ContentUploader</name>
 	<description>ContentUploader</description>
