Update item-renderer dependency to released version.

--- a/ContentUploader/pom.xml
+++ b/ContentUploader/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<properties>
+		<item-renderer.version>3.0.0</item-renderer.version>
 		<tds-dll.version>3.0.0</tds-dll.version>
 	</properties>
 
@@ -58,7 +59,7 @@
 		<dependency>
 			<groupId>org.opentestsystem.delivery</groupId>
 			<artifactId>item-renderer</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
+			<version>${item-renderer.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
