--- a/ContentUploader/pom.xml
+++ b/ContentUploader/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 
 	<properties>
-		<item-renderer.version>3.0.9</item-renderer.version>
+		<item-renderer.version>3.1.0.RELEASE</item-renderer.version>
 		<tds-dll.version>3.0.1</tds-dll.version>
 	</properties>
 
