--- a/ContentUploader/pom.xml
+++ b/ContentUploader/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>tds</groupId>
-	<artifactId>ContentUploader</artifactId>
+	<groupId>org.opentestsystem.delivery</groupId>
+	<artifactId>content-uploader</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>ContentUploader</name>
+	<name>content-uploader</name>
 	<description>ContentUploader</description>
 
 	<parent>
@@ -103,8 +103,29 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<finalName>ContentUploader</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 
+	<scm>
+		<connection>scm:git:https://github.com/SmarterApp/TDS_ContentUploader.git</connection>
+		<developerConnection>scm:git:git://github.com/SmarterApp/TDS_ContentUploader.git</developerConnection>
+		<url>https://github.com/SmarterApp/TDS_ContentUploader</url>
+		<tag>HEAD</tag>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>central</id>
+			<name>airdev-releases</name>
+			<url>https://airdev.jfrog.io/airdev/libs-releases-local</url>
+		</repository>
+	</distributionManagement>
 </project>
