--- a/ContentUploader/pom.xml
+++ b/ContentUploader/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.opentestsystem.delivery</groupId>
 	<artifactId>content-uploader</artifactId>
-	<version>3.1.1.RELEASE</version>
+	<version>3.1.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>content-uploader</name>
 	<description>ContentUploader</description>
@@ -118,7 +118,7 @@
 		<connection>scm:git:https://github.com/SmarterApp/TDS_ContentUploader.git</connection>
 		<developerConnection>scm:git:git://github.com/SmarterApp/TDS_ContentUploader.git</developerConnection>
 		<url>https://github.com/SmarterApp/TDS_ContentUploader</url>
-		<tag>3.1.1.RELEASE</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
